// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorLogDialog Component renders correctly 1`] = `
<div
  class="MuiDialog-root"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiDialog-container MuiDialog-scrollPaper"
    role="none presentation"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthMd MuiPaper-elevation24 MuiPaper-rounded"
      role="dialog"
    >
      <div
        class="MuiDialogTitle-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6"
        >
          Log excerpt for SSH Daemon is not running
        </h2>
      </div>
      <div
        class="MuiDialogContent-root"
        style="min-width: 600px;"
      >
        <div
          class="MuiPaper-root MuiAccordion-root WithStyles(ForwardRef(Accordion))-root-1 MuiPaper-elevation1"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root"
            role="button"
            style="padding-left: 0px;"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root margin-right-small"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <div>
                show 
                previous
                 
                2
                 lines
              </div>
            </div>
          </div>
          <div
            class="MuiCollapse-container MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root"
                    style="padding-left: 0px; padding-right: 0px;"
                  >
                    <div
                      class="log-line margin-right"
                    >
                      <div />
                      <code
                        class="align-right "
                      >
                        0
                      </code>
                      <code
                        class=""
                      >
                        Jul 22 10:40:57 raspberrypi sshd[32031]: pam_unix(sshd:session): session closed for user root
                      </code>
                    </div>
                    <div
                      class="MuiCollapse-container MuiCollapse-hidden"
                      style="min-height: 0px;"
                    >
                      <div
                        class="MuiCollapse-wrapper"
                      >
                        <div
                          class="MuiCollapse-wrapperInner"
                        >
                          <div
                            class="margin-left-small green fadeIn"
                          >
                            Copied to clipboard.
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="log-line margin-right"
                    >
                      <div />
                      <code
                        class="align-right "
                      >
                        137
                      </code>
                      <code
                        class=""
                      >
                        Jul 22 10:40:58 raspberrypi sshd[32031]: pam_unix(sshd:session): session closed for user root
                      </code>
                    </div>
                    <div
                      class="MuiCollapse-container MuiCollapse-hidden"
                      style="min-height: 0px;"
                    >
                      <div
                        class="MuiCollapse-wrapper"
                      >
                        <div
                          class="MuiCollapse-wrapperInner"
                        >
                          <div
                            class="margin-left-small green fadeIn"
                          >
                            Copied to clipboard.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="log-line margin-right"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
            />
          </svg>
          <code
            class="align-right red"
          >
            1234
          </code>
          <code
            class="red"
          >
            Jul 22 10:40:56 raspberrypi sshd[32031]: pam_unix(sshd:session): session closed for user root
          </code>
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                class="margin-left-small green fadeIn"
              >
                Copied to clipboard.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiDialogActions-root MuiDialogActions-spacing"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Close
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export log
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`MonitorLogDialog Component renders correctly for description only 1`] = `
<div
  class="MuiDialog-root"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiDialog-container MuiDialog-scrollPaper"
    role="none presentation"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthMd MuiPaper-elevation24 MuiPaper-rounded"
      role="dialog"
    >
      <div
        class="MuiDialogTitle-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6"
        >
          Details for SSH Daemon is not running
        </h2>
      </div>
      <div
        class="MuiDialogContent-root"
        style="min-width: 600px;"
      >
        <div
          class="log-line margin-right"
        >
          <div />
          <code
            class="align-right "
          >
            1
          </code>
          <code
            class=""
          />
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                class="margin-left-small green fadeIn"
              >
                Copied to clipboard.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiDialogActions-root MuiDialogActions-spacing"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Close
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Export log
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;
